syntax = "proto3";
import "models/common.proto";
package user;
option go_package = "github.com/DubrovEva/higher_search/backend/pkg/proto/models";

message UserID {
  int64 ID = 1;
}

message UserIDs {
  repeated int64 IDs = 1;
}

message UserInfo {
  string avatar = 1;
  string description = 2;
  string email = 3;
  string hash = 4;
  repeated common.Links links = 5;
  string middle_name = 6;
  string name = 7;
  ProjectRole role = 8;
  int64 salt = 9;
  string shortDescription = 10;
  string surname = 11;
}

message User {
  UserID ID = 1;
  UserInfo user_info = 2;
}

message Users {
  repeated User users = 1;
}

enum ProjectRole {
  DEVELOPER = 0;
  MODERATOR = 1;
  ORDINARY = 2;
}